{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 259,
  "lineage": "be66ac01-48bb-6df4-1278-d906f440f97c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b450d8c47e505851",
            "domain": "vpc",
            "id": "eipalloc-0b450d8c47e505851",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-22-160-45.compute-1.amazonaws.com",
            "public_ip": "23.22.160.45",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "itay-zrihan-eip"
            },
            "tags_all": {
              "Name": "itay-zrihan-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:030537463932:instance/i-01e7dcc29d0fa7025",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e7dcc29d0fa7025",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.xlarge",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0da678894a96525ef",
            "private_dns": "ip-10-0-83-205.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.83.205",
            "public_dns": "ec2-23-22-235-238.compute-1.amazonaws.com",
            "public_ip": "23.22.235.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00279c744b88ceb8e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00e38b6a53c546403"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fee212dbf8cbc392",
            "tags": {
              "Name": "itay-zrihan-ec2-instance"
            },
            "tags_all": {
              "Name": "itay-zrihan-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00e38b6a53c546403"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "aws_security_group.itay-zrihan-sg-ec2-instance",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.itay-zrihan-vpc",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "itay-new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030537463932:internet-gateway/igw-0ab1c0323217c409d",
            "id": "igw-0ab1c0323217c409d",
            "owner_id": "030537463932",
            "tags": {
              "Name": "itay-zrihan-igw"
            },
            "tags_all": {
              "Name": "itay-zrihan-igw"
            },
            "vpc_id": "vpc-0bbfce55ae4648e3b"
          },
          "dependencies": [
            "aws_vpc.itay-zrihan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b450d8c47e505851",
            "connectivity_type": "public",
            "id": "nat-0b7d4b3d0f78940d4",
            "network_interface_id": "eni-0317057edbf434abf",
            "private_ip": "10.0.93.34",
            "public_ip": "23.22.160.45",
            "subnet_id": "subnet-0fee212dbf8cbc392",
            "tags": {
              "Name": "itay-zrihan-nat"
            },
            "tags_all": {
              "Name": "itay-zrihan-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.itay-new-igw",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.itay-zrihan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030537463932:route-table/rtb-074735f90b35618c5",
            "id": "rtb-074735f90b35618c5",
            "owner_id": "030537463932",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b7d4b3d0f78940d4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "itay-zrihan-private"
            },
            "tags_all": {
              "Name": "itay-zrihan-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfce55ae4648e3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.itay-new-igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.itay-zrihan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030537463932:route-table/rtb-0770d6a42448d9361",
            "id": "rtb-0770d6a42448d9361",
            "owner_id": "030537463932",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab1c0323217c409d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "itay-zrihan-public"
            },
            "tags_all": {
              "Name": "itay-zrihan-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfce55ae4648e3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.itay-new-igw",
            "aws_vpc.itay-zrihan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0671a9b486fc40def",
            "route_table_id": "rtb-074735f90b35618c5",
            "subnet_id": "subnet-07cc34978e5350c75"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.itay-new-igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.itay-zrihan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0950e592f3f66dfa0",
            "route_table_id": "rtb-074735f90b35618c5",
            "subnet_id": "subnet-0d015e7ef481dc162"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.itay-new-igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.itay-zrihan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04284ad7dc5cb6603",
            "route_table_id": "rtb-0770d6a42448d9361",
            "subnet_id": "subnet-0fee212dbf8cbc392"
          },
          "dependencies": [
            "aws_internet_gateway.itay-new-igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.itay-zrihan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c938d49c05bbf1aa",
            "route_table_id": "rtb-0770d6a42448d9361",
            "subnet_id": "subnet-05e8002ce03b10a1e"
          },
          "dependencies": [
            "aws_internet_gateway.itay-new-igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.itay-zrihan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "itay-zrihan-sg-ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030537463932:security-group/sg-00e38b6a53c546403",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e38b6a53c546403",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "itay-zrihan-sg-ec2-instance",
            "name_prefix": "",
            "owner_id": "030537463932",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itay-zrihan-SG"
            },
            "tags_all": {
              "Name": "itay-zrihan-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfce55ae4648e3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.itay-zrihan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030537463932:subnet/subnet-07cc34978e5350c75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cc34978e5350c75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030537463932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itay-zrihan-private-us-east-1a"
            },
            "tags_all": {
              "Name": "itay-zrihan-private-us-east-1a"
            },
            "vpc_id": "vpc-0bbfce55ae4648e3b"
          },
          "dependencies": [
            "aws_vpc.itay-zrihan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030537463932:subnet/subnet-0d015e7ef481dc162",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d015e7ef481dc162",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030537463932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itay-zrihan-private-us-east-1b"
            },
            "tags_all": {
              "Name": "itay-zrihan-private-us-east-1b"
            },
            "vpc_id": "vpc-0bbfce55ae4648e3b"
          },
          "dependencies": [
            "aws_vpc.itay-zrihan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030537463932:subnet/subnet-0fee212dbf8cbc392",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fee212dbf8cbc392",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030537463932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itay-zrihan-public-us-east-1a"
            },
            "tags_all": {
              "Name": "itay-zrihan-public-us-east-1a"
            },
            "vpc_id": "vpc-0bbfce55ae4648e3b"
          },
          "dependencies": [
            "aws_vpc.itay-zrihan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030537463932:subnet/subnet-05e8002ce03b10a1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e8002ce03b10a1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030537463932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itay-zrihan-public-us-east-1b"
            },
            "tags_all": {
              "Name": "itay-zrihan-public-us-east-1b"
            },
            "vpc_id": "vpc-0bbfce55ae4648e3b"
          },
          "dependencies": [
            "aws_vpc.itay-zrihan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "itay-zrihan-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030537463932:vpc/vpc-0bbfce55ae4648e3b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df68489b347dc186",
            "default_route_table_id": "rtb-0c626de3595498325",
            "default_security_group_id": "sg-014cc8a0fb53953f6",
            "dhcp_options_id": "dopt-0fa1dce21b7dd73db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bbfce55ae4648e3b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c626de3595498325",
            "owner_id": "030537463932",
            "tags": {
              "Name": "itay-zrihan-vpc"
            },
            "tags_all": {
              "Name": "itay-zrihan-vpc"
            }
          }
        }
      ]
    }
  ]
}